--- a/src/app/+modules/local-product/components/local-product-list/local-product-list.component.html
+++ b/src/app/+modules/local-product/components/local-product-list/local-product-list.component.html
@@ -14,14 +14,12 @@
                         <mat-option value="Extrahotelera">Extrahotelera</mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field *ngIf="isTermSelected" style="width:90%" (input)="onSearchTerm($event.target.value)"
-                    class="example-full-width">
+                <mat-form-field *ngIf="isTermSelected" style="width:90%" (input)="onSearchTerm($event.target.value)" class="example-full-width">
                     <mat-label>Search by term</mat-label>
                     <textarea formControlName="byTerm" class="searchShops" matInput placeholder=""></textarea>
                 </mat-form-field>
                 <button mat-flat-button (click)="onSubmit()">Consult</button>
-                <mat-form-field style="width:90%" (input)="onSearchChange($event.target.value)"
-                    class="example-full-width">
+                <mat-form-field style="width:90%" (input)="onSearchChange($event.target.value)" class="example-full-width">
                     <mat-label>Filter</mat-label>
                     <textarea class="searchShops" matInput placeholder=""></textarea>
                 </mat-form-field>
@@ -49,9 +47,7 @@
                             </mat-radio-group>
                         </button>
                     </mat-menu>
-                    <mat-paginator [disabled]="canChangePage" #paginator [length]="localProductShops.length"
-                        [pageSize]="pageSize" (page)="handlePage($event)" (click)="pageChange()"
-                        [pageSizeOptions]="pageSizeOptions" aria-label="Select page">
+                    <mat-paginator [disabled]="canChangePage" #paginator [length]="localProductShops.length" [pageSize]="pageSize" (page)="handlePage($event)" (click)="pageChange()" [pageSizeOptions]="pageSizeOptions" aria-label="Select page">
                     </mat-paginator>
                 </div>
                 <div *ngIf="isLoading" class="spinnerBox">
@@ -65,7 +61,7 @@
                                     <!-- class="card-tittle" -->
                                     <mat-panel-title class="card-tittle">
                                         <p>{{item.NOMBRE}}</p>
-                                        <p *ngIf="item.distance">{{item.distance}} km</p>
+                                        <p *ngIf="sortBy === 'location'">{{item.distance}} km</p>
                                     </mat-panel-title>
                                     <!-- <mat-panel-description class="description-panel">
                                     <p *ngIf="item.distance">{{item.distance}} km</p>
@@ -75,13 +71,10 @@
                                 <p> Places: {{item.PLAZAS}}</p>
                                 <p> Phone: {{item.TELEFONO}}</p>
                                 <div class="detailAndZoomButtons">
-                                    <button title="Zoom to Shop" mat-raised-button class="zoomButton"
-                                        (click)="zoomToMap(item.ID)"> </button>
-                                    <button title="Detail" mat-raised-button class="detailButton"
-                                        (click)="goToDetail(item)">
+                                    <button title="Zoom to Shop" mat-raised-button class="zoomButton" (click)="zoomToMap(item.ID)"> </button>
+                                    <button title="Detail" mat-raised-button class="detailButton" (click)="goToDetail(item)">
                                     </button>
-                                    <button title="Route" mat-raised-button class="googleMapButton"
-                                        (click)="openDialog(item)"></button>
+                                    <button title="Route" mat-raised-button class="googleMapButton" (click)="openDialog(item)"></button>
                                 </div>
                             </mat-expansion-panel>
                         </mat-accordion>
